--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,29 @@
+# Dependencies
 node_modules
+backend/node_modules
+
+# Build
 dist
+backend/dist
+
+# Environment
+.env
+.env.local
+.env.*.local
+backend/.env
+
+# System
 nul
 .DS_Store
 *.log
+npm-debug.log*
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# Prisma
+backend/prisma/*.db
+backend/prisma/*.db-journal
