--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,9 @@
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "engines": {
     "node": ">=18.0.0"
   }
