--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    command: npm run dev
+    command: sh -c "npm run db:generate && npm run db:push && npm run db:seed && npm run dev"
 
 volumes:
   postgres_data:
